# Modified: 2025-09-20

[package]
name = "compliance-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Real-time compliance dashboard for FedRAMP automation"

[dependencies]
fedramp-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Web server dependencies
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
env_logger = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
test-utils = []
