# Modified: 2025-01-20

[package]
name = "control-mapping"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Cross-framework security control mapping engine"

[dependencies]
fedramp-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true

[features]
default = []
test-utils = []
