# Modified: 2025-01-20

[package]
name = "document-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Document parsing and OSCAL conversion for FedRAMP compliance"

[dependencies]
fedramp-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true
regex.workspace = true

# Document processing
calamine.workspace = true
docx-rs.workspace = true
pulldown-cmark.workspace = true

# Async processing
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"

[features]
default = []
test-utils = []
